<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewProductFragment">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/gsm_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/submit"
            android:layout_toStartOf="@+id/submit"
            android:hint="@string/git_hub" />

        <Button
            android:contentDescription="@string/submit"
            android:id="@+id/gsm_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/flatGreen"
            android:text="@string/submit" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/model" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/sim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sim" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/screenSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/screen_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/displayType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/display_type" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/os"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/os" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/iMemory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/internal_memory" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/eMemory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/external_memory" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/fCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/front_camera" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/bCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/back_camera" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/wlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wlan" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/bluetooth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bluetooth" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nfc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nfc" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/infrared"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/infrared" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/radio" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/battery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/battery" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:contentDescription="@string/submit"
                android:id="@+id/form_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
