<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mobiles.msm.fragments.SendNotificationFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/messagetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/message" />

    <EditText
        android:id="@+id/message"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messagetext"
        android:layout_margin="10dp"
        android:background="@drawable/border_text"
        android:padding="10dp" />


    <TextView
        android:id="@+id/roletext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/role" />


    <AutoCompleteTextView
        android:id="@+id/role"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roletext"
        android:layout_margin="10dp"
        android:background="@drawable/border_text"
        android:padding="10dp" />

    <TextView
        android:id="@+id/validity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/role"
        android:layout_margin="10dp"
        android:background="@drawable/border_text"
        android:drawableLeft="@drawable/ic_action_calendar2"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/validity" />


    <Button
        android:contentDescription="@string/notify"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/orange"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/notify" />


</RelativeLayout>
