<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/quantity"
            android:layout_toStartOf="@+id/quantity"
            android:gravity="center_vertical|start"
            android:padding="7dp"
            android:text="@string/type"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type"
            android:gravity="center_vertical|start"
            android:padding="7dp"
            android:text="@string/brand"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="start|center_vertical"
            android:padding="7dp"
            android:text="@string/quantity"
            android:textColor="@color/flatGreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/compatible_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/quantity"
            android:gravity="start|center_vertical"
            android:padding="7dp"
            android:text="@string/compatible_model"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>