<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobiles.msm.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button

            android:contentDescription="@string/pay_salary"
            android:id="@+id/paySalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/myPrimaryColor"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/pay_salary"
            android:textSize="20sp" />

        <Button
            android:contentDescription="@string/view_salary"
            android:id="@+id/viewExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/myPrimaryColor"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/view_salary"
            android:textSize="20sp" />

        <Button
            android:contentDescription="@string/purchase_pay"
            android:id="@+id/viewBills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/myPrimaryColor"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/purchase_pay"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
